--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "aws-amplify": "^6.6.6",
-    "vue": "^3.4.21"
+    "pinia": "^3.0.3",
+    "vue": "^3.4.21",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.5.0",
